--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
 <p>My Football is an amazing sport where there are 11 players on ateam and the goal is to kick the ball into the goal to score a point.There are many football leagues like the Premier league and the Bundesliga. If your team wins a match your team gets 3 points and whichever team in any league has the most points win. Also if you draw you get 1 point and if you lose you get nothing. .</p>
 
 </body>
- 
+</html>
