--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 <body>
 
 <h1>Football</h1>
-<p> Football is an amazing sport where there are 11 players on ateam and the goal is to kick the ball into the goal to score a point.There are many football leagues like the Premier league and the Bundesliga. If your team wins a match your team gets 3 points and whichever team in any league has the most points win. Also if you draw you get 1 point and if you lose you get nothing.In this sport ther are goalkeepers, defenders, midfielders and attackers. Normally, the attackers are the players that score the goals and the defenders mostly tackle the ball from the oppostitions team and the goalkeepers save the shots. You are only allowed to use their foot to shoot and pass the ball although, the goalkeeper is allowed to catch the ball with his hands if they are in their box.  .</p>
+<p> Football is an amazing sport where there are 11 players on ateam and the goal is to kick the ball into the goal to score a point.There are many football leagues like the Premier league and the Bundesliga. If your team wins a match your team gets 3 points and whichever team in any league has the most points win. Also if you draw you get 1 point and if you lose you get nothing.In this sport ther are goalkeepers, defenders, midfielders and attackers. Normally, the attackers are the players that score the goals and the defenders mostly tackle the ball from the oppostitions team and the goalkeepers save the shots. You are only allowed to use their foot to shoot and pass the ball although, the goalkeeper is allowed to catch the ball with his hands if they are in their box.  
+ .</p>
+ <h2>Leagues</h2>
+ <p> There are many famous leagues in football but these are the most famous ones.<br>
+  <ul>
+   <li> English Premier league
+    <li>German Bundesliga
+     <li> Spanish la liga
+      <li> Italian serie a
+       <li> French ligue 1
 
 </body>
 </html>
