--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
     <li>German Bundesliga
      <li> Spanish la liga
       <li> Italian serie a
-       <li> French ligue 1
-
+       <li> French league 1
+        
+        <h3> Top ten best players of all time. </h3>
+        <ol>
+         <li> Lionel Messi
+          <li> Cristiano Ronaldo
+           <li> Diego Maradona
+            <li> Pele
+             <li> Ronaldo Nazario
+              <li> Johan cruyff
+               <li> Zinedine Zidane
+                <li> Thierry Henry
+                 <li> Maldini
+                  <li> Van Basten
+ 
 </body>
 </html>
  
